Translator page added. Added server res for tokens and text warning

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="bower_components/intro.js/introjs.css" />
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/rickshaw/rickshaw.min.css" />
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
@@ -353,7 +354,7 @@
     <script src="src/about/about.controller.js"></script>
     <script src="src/about/about.routers.js"></script>
 
-    <script src="src/translator/translator.routes.js"></script>
+    <script src="src/translator/translator.routers.js"></script>
     <script src="src/translator/translator.controller.js"></script>
     
 
