Added token, pos tagging to translation page.

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
     </script>
     <script src="socket.io/socket.io.js"></script>
     <script src='//maps.googleapis.com/maps/api/js?libraries=weather,geometry,visualization,places,drawing&sensor=false&language=en&v=3.17'></script>
-
+    <script src="https://unpkg.com/nlp_compromise@latest/builds/nlp_compromise.min.js"></script>
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
